fix for next to last spacing

--- a/v7.0/Bedford Template Family/begin navigation sign in last.css
+++ b/v7.0/Bedford Template Family/begin navigation sign in last.css
@@ -15,6 +15,26 @@
       
       }
   
+  #mainNavigation > div:last-child,
+  #mobileNavigation > div:last-child
+  
+    {
+      
+      order : 1;
+      
+      }
+      
+  @media only screen and ( min-width : 641px ) {
+  
+    body:not( .force-mobile-nav ) .nav-wrapper nav > div:last-child > a,
+    body:not( .force-mobile-nav ) .nav-wrapper nav > div:last-child .folder-toggle {
+    
+      padding-right : 1em;
+      
+      }
+      
+    }
+    
   /* desktop */
   
   #mainNavigation {
